--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -200,3 +200,39 @@ other measures, such as the Omega index [2].},
    year = {2011},
 }
 
+@article{Golalipour2021,
+   abstract = {Clustering, as an unsupervised learning, is aimed at discovering the natural groupings of a set of patterns, points, or objects. In clustering algorithms, a significant problem is the absence of a deterministic approach based on which users can decide which clustering method best matches a given set of input data. This is due to using certain criteria for optimization. Clustering ensemble as a knowledge reuse offers a solution to solve the challenges inherent in clustering. It seeks to explore results of high stability and robustness by composing computed solutions achieved by base clustering algorithms without getting access to the features. Combining base clusterings together degrades the quality of the final solution when low-quality ensemble members are used. Several researchers in this field have suggested the concept of clustering ensemble selection for the aim of selecting a subset of base clustering based on quality and diversity. While clustering ensemble makes a combination of all ensemble members, clustering ensemble selection chooses a subset of ensemble members and forms a smaller cluster ensemble that performs better than the clustering ensemble. This survey includes the historical development of data clustering that makes an overview on basic clustering techniques, discusses clustering ensemble algorithms including ensemble generation mechanisms and consensus function, and point out clustering ensemble selection techniques with considering quality and diversity.},
+   author = {Keyvan Golalipour and Ebrahim Akbari and Seyed Saeed Hamidi and Malrey Lee and Rasul Enayatifar},
+   doi = {10.1016/J.ENGAPPAI.2021.104388},
+   issn = {0952-1976},
+   journal = {Engineering Applications of Artificial Intelligence},
+   keywords = {Cluster analysis,Clustering ensemble,Clustering ensemble selection,Consensus clustering,Data clustering},
+   month = {9},
+   pages = {104388},
+   publisher = {Pergamon},
+   title = {From clustering to clustering ensemble selection: A review},
+   volume = {104},
+   year = {2021},
+}
+
+@software{Sano_ClusterEnsembles_2021,
+author = {Sano, Takehiro},
+license = {MIT},
+month = {8},
+title = {{ClusterEnsembles}},
+url = {https://github.com/tsano430/ClusterEnsembles},
+version = {1.0.0},
+year = {2021}
+}
+
+@article{Fern2004,
+   abstract = {A critical problem in cluster ensemble research is how to combine multiple clusterings to yield a final superior clustering result. Leveraging advanced graph partitioning techniques, we solve this problem by reducing it to a graph partitioning problem. We introduce a new reduction method that constructs a bipartite graph from a given cluster ensemble. The resulting graph models both instances and clusters of the ensemble simultaneously as vertices in the graph. Our approach retains all of the information provided by a given ensemble, allowing the similarity among instances and the similarity among clusters to be considered collectively in forming the final clustering. Further, the resulting graph partitioning problem can be solved efficiently. We empirically evaluate the proposed approach against two commonly used graph formulations and show that it is more robust and achieves comparable or better performance in comparison to its competitors.},
+   author = {Xiaoli Zhang Fern and Carla E. Brodley},
+   doi = {10.1145/1015330.1015414},
+   isbn = {1581138385},
+   journal = {Proceedings, Twenty-First International Conference on Machine Learning, ICML 2004},
+   pages = {281-288},
+   title = {Solving cluster ensemble problems by bipartite graph partitioning},
+   year = {2004},
+}
+
